--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
   }
   
   h1 {
+    text-align: center;
     font-size: 2.4rem;
     font-weight: 800;
   }
@@ -57,6 +58,7 @@ body {
   
   /* classes */
   .header {
+      display: show;
       display: flex;
   }
 
