--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     font-size: 1rem;
     line-height: 1.5;
     margin: 0;
+    background: white;
+    
   }
   
   img {
@@ -33,6 +35,7 @@ body {
     font-size: 1.4rem;
     font-weight: 600;
     min-height: 4rem;
+    border-bottom: 2px solid;
   }
 
   ul {
