--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,11 @@ body {
   }
   
   footer {
-    margin-top: auto;
+    margin-top: 100px;
     padding-top: 1.4rem;
     padding-bottom: 2rem;
+    background: #292929;
+    color: whitesmoke;
   }
   
   footer > p > a {
@@ -75,10 +77,16 @@ body {
 
   .logo {
     width: 20%;
+    min-width: 80px;
+    border: solid 1px;
+    text-align: center;
   }
 
   .headeritem {
-      margin-right: 10px;
+      width: 10vw;
+      min-width: 80px;
+      border: solid 1px;
+      text-align: center;
   }
 
   .container {
@@ -101,6 +109,7 @@ body {
     display: block;
     width: 60%;
     margin: auto;
+    
   }  
 
   /* helpers */
@@ -148,12 +157,22 @@ body {
     text-transform: uppercase;
   }
 
+  @media (min-width: 0px) {
+      .map {
+          width: 100%;
+      }
 
-  @media (min-width: 700px) {
+  }
+
+
+  @media (min-width: 1000px) {
     .cards{
         display: flex;
     }
 
+    .map {
+        width: 60%;
+    }
   }
 
   @media (min-width: 1560px) {
